testsuite/tests/th/T18740d.stderr
T18740d.hs:17:7: error: [GHC-55017]
    • Illegal variable name: ‘Bool’
      When splicing a TH expression: GHC.Internal.Types.Bool
    • In the untyped splice: $(return (VarE ''Bool))

